@@ -9,7 +9,7 @@ import fantaParcoBack.entity.Login;
 import fantaParcoBack.entity.AuthResponse;
 import fantaParcoBack.security.JwtTokenProvider;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 @RestController
@@ -17,11 +17,13 @@ public class AuthController {
 
     private final JwtTokenProvider jwtTokenProvider;
 
-    // Lista di utenti fissi
-    private static final List<Login> fixedAdmins = Arrays.asList(
-            new Login("arpaia_nunzio@libero.it", "Allclient"),
-            new Login("sperindeo_pasquale@gmail.com", "Allclient"),
-            new Login("carfora_davide@gmail.com", "Allclient")
+    // Lista di utenti fissi (hardcoded)
+    private static final List<Login> fixedAdmins = Collections.unmodifiableList(
+            List.of(
+                    new Login("arpaia_nunzio@libero.it", "Allclient"),
+                    new Login("sperindeo_pasquale@gmail.com", "Allclient"),
+                    new Login("carfora_davide@gmail.com", "Allclient")
+            )
     );
 
     public AuthController(JwtTokenProvider jwtTokenProvider) {
@@ -34,7 +36,9 @@ public class AuthController {
         // Verifica se le credenziali corrispondono a uno degli utenti fissi
         for (Login admin : fixedAdmins) {
             if (admin.getUsername().equals(loginRequest.getUsername()) && admin.getPassword().equals(loginRequest.getPassword())) {
-                String token = jwtTokenProvider.createToken(loginRequest.getUsername());
+                // Creiamo un token con il nome utente e un ruolo di default (es. "USER")
+                List<String> roles = List.of("ADMIN");  // Puoi cambiare il ruolo in base alle necessità
+                String token = jwtTokenProvider.createToken(loginRequest.getUsername(), roles);
                 return ResponseEntity.ok(new AuthResponse(token)); // Restituisci il token
             }
         }
